[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orch"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sam Foreman", email = "saforem2@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/saforem2/orch#readme"
Issues = "https://github.com/saforem2/orch/issues"
Source = "https://github.com/saforem2/orch"

[tool.hatch.version]
path = "src/orch/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/orch tests}"

[tool.coverage.run]
source_pkgs = ["orch", "tests"]
branch = true
parallel = true
omit = [
  "src/orch/__about__.py",
]

[tool.coverage.paths]
orch = ["src/orch", "*/orch/src/orch"]
tests = ["tests", "*/orch/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
]
